[feat] Add get payment endpoints for admin & customer
