# backend/src/routes/customer/paymentRoutes.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import {createPayment, verifyPayment} from "../../controllers/customer/paymentController";
+import {createPayment, verifyPayment, getPayments} from "../../controllers/customer/paymentController";
 import {protect} from "../../middlewares/authMiddleware"
 
 
@@ -11,7 +11,10 @@ const router = express.Router();
 router.post('/create', protect, createPayment);
 
 // Create payment request
-router.post('/verify', verifyPayment); 
+router.post('/verify', verifyPayment);
+
+// Get payments of authenticated user
+router.get('/', protect, getPayments);
 
 
 
